--- a/Beehive/Classes/Modules/Mine/Info/Controller/LLLoginViewController.xib
+++ b/Beehive/Classes/Modules/Mine/Info/Controller/LLLoginViewController.xib
@@ -1,13 +1,20 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LLLoginViewController">
             <connections>
+                <outlet property="loginButton" destination="PiL-cm-B55" id="cu9-8N-Pw8"/>
+                <outlet property="passwordInputView" destination="0Gu-HK-4fy" id="u1w-Eg-ulv"/>
+                <outlet property="phoneInputView" destination="h9Q-a5-1DJ" id="4lK-aA-BnI"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -15,8 +22,142 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app_logo" translatesAutoresizingMaskIntoConstraints="NO" id="UMT-Mn-pBf">
+                    <rect key="frame" x="155" y="60" width="65" height="65"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="65" id="1U0-he-rtY"/>
+                        <constraint firstAttribute="width" constant="65" id="Ohp-5t-8EU"/>
+                    </constraints>
+                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h9Q-a5-1DJ" customClass="LLUserInputView">
+                    <rect key="frame" x="35" y="163" width="305" height="40"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="j58-C3-6WH"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Gu-HK-4fy" customClass="LLUserInputView">
+                    <rect key="frame" x="35" y="218" width="305" height="40"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="K50-X3-qzW"/>
+                    </constraints>
+                </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PiL-cm-B55">
+                    <rect key="frame" x="35" y="273" width="305" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="uWI-RY-d3R"/>
+                    </constraints>
+                    <state key="normal" title="登录">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="loginAction:" destination="-1" eventType="touchUpInside" id="zp1-cm-eby"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RwH-qu-rfQ">
+                    <rect key="frame" x="35" y="318" width="31" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="kup-E5-MOw"/>
+                    </constraints>
+                    <state key="normal" title="注册">
+                        <color key="titleColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="registereAction:" destination="-1" eventType="touchUpInside" id="dnJ-Fg-xIN"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="60d-Ah-DDa">
+                    <rect key="frame" x="263" y="318" width="77" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="xl2-mQ-Cp2"/>
+                    </constraints>
+                    <state key="normal" title="忘记密码？">
+                        <color key="titleColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="forgotAction:" destination="-1" eventType="touchUpInside" id="LFb-q9-avM"/>
+                    </connections>
+                </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uP6-Ef-ulK">
+                    <rect key="frame" x="0.0" y="545" width="375" height="122"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b6j-pX-e0E">
+                            <rect key="frame" x="35" y="8.5" width="101.5" height="0.5"/>
+                            <color key="backgroundColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="0.5" id="LpO-fl-foN"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="第三方登录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ix-N8-rHU">
+                            <rect key="frame" x="151.5" y="0.0" width="72" height="17"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RmN-li-6LA">
+                            <rect key="frame" x="165" y="42" width="45" height="45"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="45" id="fK1-ML-p0m"/>
+                                <constraint firstAttribute="width" constant="45" id="p7w-jR-Mtm"/>
+                            </constraints>
+                            <state key="normal" image="user_login_wx"/>
+                            <connections>
+                                <action selector="wxLoginAction:" destination="-1" eventType="touchUpInside" id="lYf-O0-qj5"/>
+                            </connections>
+                        </button>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fxg-zD-SEg">
+                            <rect key="frame" x="238.5" y="8.5" width="101.5" height="0.5"/>
+                            <color key="backgroundColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="0.5" id="tfk-W2-gDJ"/>
+                            </constraints>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="fxg-zD-SEg" firstAttribute="centerY" secondItem="b6j-pX-e0E" secondAttribute="centerY" id="3qZ-KT-937"/>
+                        <constraint firstItem="RmN-li-6LA" firstAttribute="centerX" secondItem="uP6-Ef-ulK" secondAttribute="centerX" id="BiP-px-VbI"/>
+                        <constraint firstItem="9Ix-N8-rHU" firstAttribute="centerY" secondItem="b6j-pX-e0E" secondAttribute="centerY" id="COb-dV-kT6"/>
+                        <constraint firstItem="fxg-zD-SEg" firstAttribute="leading" secondItem="9Ix-N8-rHU" secondAttribute="trailing" constant="15" id="Ff6-GH-ANU"/>
+                        <constraint firstAttribute="bottom" secondItem="RmN-li-6LA" secondAttribute="bottom" constant="35" id="GJK-Fs-sl6"/>
+                        <constraint firstItem="9Ix-N8-rHU" firstAttribute="leading" secondItem="b6j-pX-e0E" secondAttribute="trailing" constant="15" id="eHh-M6-H7q"/>
+                        <constraint firstAttribute="trailing" secondItem="fxg-zD-SEg" secondAttribute="trailing" constant="35" id="fgp-An-JyC"/>
+                        <constraint firstAttribute="height" constant="122" id="qpZ-xu-9Vg"/>
+                        <constraint firstItem="9Ix-N8-rHU" firstAttribute="centerX" secondItem="uP6-Ef-ulK" secondAttribute="centerX" id="s30-KI-wEL"/>
+                        <constraint firstItem="9Ix-N8-rHU" firstAttribute="top" secondItem="uP6-Ef-ulK" secondAttribute="top" id="t9Z-pJ-uLd"/>
+                        <constraint firstItem="b6j-pX-e0E" firstAttribute="leading" secondItem="uP6-Ef-ulK" secondAttribute="leading" constant="35" id="wo7-hm-Sqi"/>
+                    </constraints>
+                </view>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="60d-Ah-DDa" firstAttribute="top" secondItem="PiL-cm-B55" secondAttribute="bottom" constant="5" id="01U-z5-cJV"/>
+                <constraint firstItem="uP6-Ef-ulK" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" id="050-jh-6DN"/>
+                <constraint firstItem="RwH-qu-rfQ" firstAttribute="leading" secondItem="PiL-cm-B55" secondAttribute="leading" id="3lR-Fg-k3S"/>
+                <constraint firstItem="0Gu-HK-4fy" firstAttribute="top" secondItem="h9Q-a5-1DJ" secondAttribute="bottom" constant="15" id="6aY-tY-X2D"/>
+                <constraint firstItem="UMT-Mn-pBf" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="40" id="CHL-K0-g94"/>
+                <constraint firstItem="PiL-cm-B55" firstAttribute="leading" secondItem="h9Q-a5-1DJ" secondAttribute="leading" id="ErC-H2-UXc"/>
+                <constraint firstItem="h9Q-a5-1DJ" firstAttribute="top" secondItem="UMT-Mn-pBf" secondAttribute="bottom" constant="38" id="FYh-ov-CY6"/>
+                <constraint firstItem="PiL-cm-B55" firstAttribute="trailing" secondItem="h9Q-a5-1DJ" secondAttribute="trailing" id="S3c-ed-cpL"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="uP6-Ef-ulK" secondAttribute="trailing" id="VJt-Nk-5fe"/>
+                <constraint firstItem="RwH-qu-rfQ" firstAttribute="top" secondItem="PiL-cm-B55" secondAttribute="bottom" constant="5" id="Y8k-1S-wFd"/>
+                <constraint firstItem="60d-Ah-DDa" firstAttribute="trailing" secondItem="PiL-cm-B55" secondAttribute="trailing" id="ZKg-UQ-UVX"/>
+                <constraint firstItem="0Gu-HK-4fy" firstAttribute="leading" secondItem="h9Q-a5-1DJ" secondAttribute="leading" id="ZvV-D1-Vip"/>
+                <constraint firstItem="PiL-cm-B55" firstAttribute="top" secondItem="0Gu-HK-4fy" secondAttribute="bottom" constant="15" id="aZ8-ry-GBx"/>
+                <constraint firstItem="uP6-Ef-ulK" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="cgx-lW-gbw"/>
+                <constraint firstItem="0Gu-HK-4fy" firstAttribute="trailing" secondItem="h9Q-a5-1DJ" secondAttribute="trailing" id="nEJ-nk-MfM"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="h9Q-a5-1DJ" secondAttribute="trailing" constant="35" id="smp-yN-RWq"/>
+                <constraint firstItem="h9Q-a5-1DJ" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="35" id="vLx-ON-1od"/>
+                <constraint firstItem="UMT-Mn-pBf" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="wJw-qD-X1m"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <point key="canvasLocation" x="72.799999999999997" y="48.125937031484263"/>
         </view>
     </objects>
+    <resources>
+        <image name="app_logo" width="65" height="65"/>
+        <image name="user_login_wx" width="45" height="45"/>
+    </resources>
 </document>
