--- a/Beehive/Classes/Modules/Message/Details/View/LLMessageDetailsHeaderView.xib
+++ b/Beehive/Classes/Modules/Message/Details/View/LLMessageDetailsHeaderView.xib
@@ -13,7 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="sVd-Uw-8DM" customClass="LLMessageDetailsHeaderView">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="419"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="413"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="faD-C8-dZ8">
@@ -58,11 +58,31 @@
                         <constraint firstAttribute="height" constant="0.5" id="CHz-M3-iHJ"/>
                     </constraints>
                 </imageView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Abr-3T-89G" customClass="UIScrollView">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Abr-3T-89G" customClass="SDCycleScrollView">
                     <rect key="frame" x="10" y="75" width="355" height="225"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="225" id="NdA-cX-N60"/>
+                    </constraints>
+                </view>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ge5-Me-BxM">
+                    <rect key="frame" x="325" y="260" width="30" height="30"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0/0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8IN-wU-YkW">
+                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="8IN-wU-YkW" firstAttribute="top" secondItem="Ge5-Me-BxM" secondAttribute="top" id="4n6-hA-5am"/>
+                        <constraint firstAttribute="height" constant="30" id="5uF-UV-HZH"/>
+                        <constraint firstAttribute="width" constant="30" id="Xv1-ZM-mam"/>
+                        <constraint firstAttribute="bottom" secondItem="8IN-wU-YkW" secondAttribute="bottom" id="hGr-bb-hdI"/>
+                        <constraint firstItem="8IN-wU-YkW" firstAttribute="leading" secondItem="Ge5-Me-BxM" secondAttribute="leading" id="jOZ-X6-Nqr"/>
+                        <constraint firstAttribute="trailing" secondItem="8IN-wU-YkW" secondAttribute="trailing" id="pmg-8M-khq"/>
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="信息正文" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DQc-Fq-nzM">
@@ -115,23 +135,16 @@
                         <constraint firstAttribute="height" constant="10" id="ni7-b9-fv4"/>
                     </constraints>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="i13-rq-Ge6">
-                    <rect key="frame" x="0.0" y="418.5" width="375" height="0.5"/>
-                    <color key="backgroundColor" red="0.88235294119999996" green="0.88235294119999996" blue="0.88235294119999996" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="0.5" id="0tM-eH-QGa"/>
-                    </constraints>
-                </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="obX-tN-Q3h">
                     <rect key="frame" x="0.0" y="373" width="375" height="40"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="评论（13）" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wDv-HY-LWP">
-                            <rect key="frame" x="10" y="12" width="67.5" height="16"/>
+                            <rect key="frame" x="10" y="13" width="62.5" height="14.5"/>
                             <constraints>
                                 <constraint firstAttribute="width" relation="lessThanOrEqual" constant="150" id="8M5-s3-AKK"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                            <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
@@ -142,6 +155,13 @@
                         <constraint firstItem="wDv-HY-LWP" firstAttribute="leading" secondItem="obX-tN-Q3h" secondAttribute="leading" constant="10" id="uxK-gi-bNv"/>
                     </constraints>
                 </view>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="i13-rq-Ge6">
+                    <rect key="frame" x="0.0" y="412.5" width="375" height="0.5"/>
+                    <color key="backgroundColor" red="0.88235294119999996" green="0.88235294119999996" blue="0.88235294119999996" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="0.5" id="0tM-eH-QGa"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
@@ -149,6 +169,7 @@
                 <constraint firstItem="JgV-9w-mjf" firstAttribute="bottom" secondItem="i13-rq-Ge6" secondAttribute="bottom" id="1jt-gk-2vX"/>
                 <constraint firstItem="obX-tN-Q3h" firstAttribute="trailing" secondItem="JgV-9w-mjf" secondAttribute="trailing" id="519-yt-1Ad"/>
                 <constraint firstItem="JgV-9w-mjf" firstAttribute="trailing" secondItem="34r-1r-Xwi" secondAttribute="trailing" constant="10" id="BNR-BD-YdS"/>
+                <constraint firstItem="Ge5-Me-BxM" firstAttribute="bottom" secondItem="Abr-3T-89G" secondAttribute="bottom" constant="-10" id="CFj-7e-bSo"/>
                 <constraint firstItem="rvN-X4-Rw6" firstAttribute="top" secondItem="E8e-WX-tQC" secondAttribute="bottom" constant="3" id="Cgr-7C-dhP"/>
                 <constraint firstItem="34r-1r-Xwi" firstAttribute="leading" secondItem="JgV-9w-mjf" secondAttribute="leading" constant="10" id="Gfk-hq-Azp"/>
                 <constraint firstItem="wNi-PB-cEZ" firstAttribute="centerY" secondItem="E8e-WX-tQC" secondAttribute="centerY" id="JZ4-Eg-nB5"/>
@@ -160,6 +181,7 @@
                 <constraint firstAttribute="trailing" secondItem="fof-b9-sdD" secondAttribute="trailing" id="SvO-ce-utb"/>
                 <constraint firstItem="DQc-Fq-nzM" firstAttribute="leading" secondItem="Abr-3T-89G" secondAttribute="leading" id="UeS-80-PAA"/>
                 <constraint firstItem="hMX-I6-y82" firstAttribute="leading" secondItem="JgV-9w-mjf" secondAttribute="leading" id="V3g-vk-apF"/>
+                <constraint firstItem="obX-tN-Q3h" firstAttribute="bottom" secondItem="JgV-9w-mjf" secondAttribute="bottom" id="XdQ-VU-TtQ"/>
                 <constraint firstItem="i13-rq-Ge6" firstAttribute="leading" secondItem="sVd-Uw-8DM" secondAttribute="leading" id="Z2Q-ql-QRY"/>
                 <constraint firstItem="34r-1r-Xwi" firstAttribute="top" secondItem="DQc-Fq-nzM" secondAttribute="bottom" id="bwn-7A-KZc"/>
                 <constraint firstItem="EyD-IG-Rec" firstAttribute="centerY" secondItem="E8e-WX-tQC" secondAttribute="centerY" id="dEk-LW-qTd"/>
@@ -168,6 +190,7 @@
                 <constraint firstItem="E8e-WX-tQC" firstAttribute="top" secondItem="JgV-9w-mjf" secondAttribute="top" constant="15" id="fLk-Dk-efg"/>
                 <constraint firstItem="faD-C8-dZ8" firstAttribute="top" secondItem="JgV-9w-mjf" secondAttribute="top" constant="10" id="hj6-dY-Aaf"/>
                 <constraint firstItem="fof-b9-sdD" firstAttribute="top" secondItem="faD-C8-dZ8" secondAttribute="bottom" constant="10" id="iNh-rP-WPc"/>
+                <constraint firstItem="Ge5-Me-BxM" firstAttribute="trailing" secondItem="Abr-3T-89G" secondAttribute="trailing" constant="-10" id="kTF-P1-il4"/>
                 <constraint firstItem="JgV-9w-mjf" firstAttribute="trailing" secondItem="DQc-Fq-nzM" secondAttribute="trailing" constant="10" id="lhg-Yv-R4A"/>
                 <constraint firstItem="obX-tN-Q3h" firstAttribute="leading" secondItem="JgV-9w-mjf" secondAttribute="leading" id="m77-N2-yFy"/>
                 <constraint firstAttribute="trailing" secondItem="i13-rq-Ge6" secondAttribute="trailing" id="oqK-vh-G4P"/>
@@ -179,7 +202,23 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="JgV-9w-mjf"/>
-            <point key="canvasLocation" x="-47.200000000000003" y="40.929535232383813"/>
+            <connections>
+                <outlet property="avatarImageView" destination="faD-C8-dZ8" id="pPx-mz-HOa"/>
+                <outlet property="commentLabel" destination="wDv-HY-LWP" id="eJX-Iv-foB"/>
+                <outlet property="contentLabel" destination="DQc-Fq-nzM" id="UXz-Rq-jPb"/>
+                <outlet property="distanceLabel" destination="N8B-aN-c83" id="vva-a7-42d"/>
+                <outlet property="favourButton" destination="hQZ-os-gN5" id="peb-ob-eue"/>
+                <outlet property="gridImageView" destination="Abr-3T-89G" id="WKH-TF-pUH"/>
+                <outlet property="gridImageViewConstraintH" destination="NdA-cX-N60" id="wuc-Q3-e7s"/>
+                <outlet property="imagePageLabel" destination="8IN-wU-YkW" id="2Qa-Ie-JKZ"/>
+                <outlet property="imagePageView" destination="Ge5-Me-BxM" id="SEJ-XP-4hT"/>
+                <outlet property="nickNameLabel" destination="E8e-WX-tQC" id="Zch-F5-VN4"/>
+                <outlet property="readButton" destination="wsx-lX-7Jx" id="hAO-Mg-bkF"/>
+                <outlet property="sexImageView" destination="wNi-PB-cEZ" id="l1n-3c-H27"/>
+                <outlet property="signLabel" destination="rvN-X4-Rw6" id="rfH-3U-BdK"/>
+                <outlet property="timeLabel" destination="EyD-IG-Rec" id="8Cb-SJ-9cH"/>
+            </connections>
+            <point key="canvasLocation" x="-47.200000000000003" y="38.23088455772114"/>
         </view>
     </objects>
     <resources>
